deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cwm-rshiny
  namespace: cwmnamespace
  labels:
    context: REnterprise
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cwm-rshiny
  template:
    metadata:
      labels:
        app: cwm-rshiny
    spec:
      # ADD sessionAffinity HERE 
      # sessionAffinity: ClientIP
      containers:
      - name: cwm-rshiny
        image: de.icr.io/cwmregspace/cwm-rshiny:0.4.0
        imagePullPolicy: Always        
        ports:
        - containerPort: 3838
#        volumeMounts:
#          - name: rep-crispml-volume
#            mountPath: /share
#      volumes:
#      - name: rep-crispml-volume
#        persistentVolumeClaim:
#          claimName: rep-crispml-pvc
#      nodeSelector:
#        env: default
