deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cwm-rshiny
  namespace: cwmnamespace
  labels:
    context: REnterprise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cwm-rshiny
  template:
    metadata:
      labels:
        app: cwm-rshiny
    spec:
      containers:
      - name: cwm-rshiny
        image: cwm-rshiny:latest
        imagePullPolicy: Always        
        ports:
        - containerPort: 3838
#        volumeMounts:
#          - name: rep-crispml-volume
#            mountPath: /share
#      volumes:
#      - name: rep-crispml-volume
#        persistentVolumeClaim:
#          claimName: rep-crispml-pvc
      nodeSelector:
        env: default
