service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwm-rshiny-service
  namespace: cwmnamespace
  labels:
    app: cwm-rshiny
    context: COVID-19
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 3838
      targetPort: 3838
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: cwm-rshiny
